# gsoc25

./: CMakeLists.txt  GSOC_25.ipynb  Makefile  README.md  build.sh  download_eigen.sh  samples_output.csv
data/: feasible_lp.txt  feasible_lp105.txt
include/: interior_point_lp.h  lp_utils.h
scripts/: test1.R  test2_main.cpp  test3_main.cpp
src/: interior_point_lp.cpp  lp_utils.cpp
